--- a/src/SalonGarden.web/Views/Evaluations/Create.cshtml
+++ b/src/SalonGarden.web/Views/Evaluations/Create.cshtml
@@ -4,25 +4,24 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>Evaluation</h4>
+<h3>New Evaluation</h3>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="EvaluationTypeId" class="control-label"></label>
-                <select asp-for="EvaluationTypeId" class ="form-control" asp-items="ViewBag.EvaluationTypeId"></select>
+                <label asp-for="StudentId" class="control-label"></label>
+                <input asp-for="StudentId" class="form-control" />
+                <span asp-validation-for="StudentId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="EvaluationStatusId" class="control-label"></label>
-                <select asp-for="EvaluationStatusId" class ="form-control" asp-items="ViewBag.EvaluationStatusId"></select>
+                <label asp-for="EvaluationTypeId" class="control-label"></label>
+                <select asp-for="EvaluationTypeId" class="form-control" asp-items="ViewBag.EvaluationTypeId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="TechniqueId" class="control-label"></label>
-                <input asp-for="TechniqueId" class="form-control" />
+                <select asp-for="TechniqueId" class="form-control" asp-items="ViewBag.TechniqueId"></select>
                 <span asp-validation-for="TechniqueId" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -30,21 +29,8 @@
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="EducatorId" class="control-label"></label>
-                <input asp-for="EducatorId" class="form-control" />
-                <span asp-validation-for="EducatorId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="StudentId" class="control-label"></label>
-                <input asp-for="StudentId" class="form-control" />
-                <span asp-validation-for="StudentId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CreationDate" class="control-label"></label>
-                <input asp-for="CreationDate" class="form-control" />
-                <span asp-validation-for="CreationDate" class="text-danger"></span>
-            </div>
+
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
