--- a/src/SalonGarden.web/Views/Evaluations/Create.cshtml
+++ b/src/SalonGarden.web/Views/Evaluations/Create.cshtml
@@ -11,22 +11,28 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="StudentId" class="control-label"></label>
-                <input asp-for="StudentId" class="form-control" />
+                <label class="control-label">Student</label>
+                <select asp-for="StudentId" class="form-control" asp-items="ViewBag.StudentId">
+                    <option>Select</option>
+                </select>
                 <span asp-validation-for="StudentId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="EvaluationTypeId" class="control-label"></label>
-                <select asp-for="EvaluationTypeId" class="form-control" asp-items="ViewBag.EvaluationTypeId"></select>
+                <label class="control-label">Type</label>
+                <select asp-for="EvaluationTypeId" class="form-control" asp-items="ViewBag.EvaluationTypeId">
+                    <option>Select</option>
+                </select>
             </div>
             <div class="form-group">
-                <label asp-for="TechniqueId" class="control-label"></label>
-                <select asp-for="TechniqueId" class="form-control" asp-items="ViewBag.TechniqueId"></select>
+                <label class="control-label">Technique</label>
+                <select asp-for="TechniqueId" class="form-control" asp-items="ViewBag.TechniqueId">
+                    <option>Select</option>
+                </select>
                 <span asp-validation-for="TechniqueId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+                <textarea asp-for="Description" class="form-control"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
 
