--- a/src/SalonGarden.web/Views/Evaluations/Edit.cshtml
+++ b/src/SalonGarden.web/Views/Evaluations/Edit.cshtml
@@ -42,7 +42,7 @@
                     <select class="form-control scoreInput" data-detailItemId="@detailItem.Id">
                         @for (int i = 0; i < criteria.TotalPoints; i++)
                         {
-                            <option value="@i">@i</option>
+                            <option value="@i" selected="@(detailItem.AllocatedPoints == i ? true : false)" >@i</option>
                         }
                     </select>
 
@@ -59,5 +59,6 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script src="~/js/editEvaluation.js" asp-append-version="true"></script>
+    @*@{await Html.RenderPartialAsync("_ValidationScriptsPartial");}*@
 }
