--- a/src/SalonGarden.web/Views/Evaluations/Edit.cshtml
+++ b/src/SalonGarden.web/Views/Evaluations/Edit.cshtml
@@ -5,59 +5,58 @@
 }
 
 
-
-
-<div class="row mb-2">
-    <div class="col-6">
-        <div class="border border-bottom-0 bg-light p-1">
-            <b>Student</b>
-        </div>
-        <div class="border p-1">
-            @Model.Student.Email
-        </div>
-    </div>
-    <div class="col-6">
-        <div class="border border-bottom-0 bg-light p-1">
-            <b>Educator</b>
-        </div>
-        <div class="border p-1">
-            @Model.Educator.UserName
-
-        </div>
+<div class="border bg-light p-2 mb-2 d-flex">
+    <div> <span class="h3">@Model.Student.Email</span></div>
+    <div class="ml-auto">
+        <button class="btn btn-success">Complete Evaluation</button>
     </div>
 </div>
 
-
-
-<div class="row mb-2">
-    <div class="col-4">
-        <div class="border border-bottom-0 bg-light p-1">
-            <b>Created</b>
+<div class="mb-2">
+    <div class="row mb-2">
+        <div class="col-6">
+            <div class="border border-bottom-0 bg-light p-1">
+                <b>Created</b>
+            </div>
+            <div class="border p-1 bg-white">
+                @Model.Evaluation.CreationDate.ToShortDateString()
+            </div>
         </div>
-        <div class="border p-1">
-            @Model.Evaluation.CreationDate.ToShortDateString()
+        <div class="col-6">
+            <div class="border border-bottom-0 bg-light p-1">
+                <b>Educator</b>
+            </div>
+            <div class="border p-1 bg-white">
+                @Model.Educator.UserName
+
+            </div>
         </div>
     </div>
-    <div class="col-4">
-        <div class="border border-bottom-0 bg-light  p-1">
-            <b>Technique</b>
-        </div>
-        <div class="border  p-1">
-            @Model.Evaluation.Technique.Description
 
+    <div class="row">
+        <div class="col-6">
+            <div class="border border-bottom-0 bg-light  p-1">
+                <b>Technique</b>
+            </div>
+            <div class="border  p-1 bg-white">
+                @Model.Evaluation.Technique.Description
+
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="border border-bottom-0 bg-light  p-1">
+                <b>Evaluation Type</b>
+            </div>
+            <div class="border  p-1 bg-white">
+                @Model.Evaluation.EvaluationType.Description
+
+            </div>
         </div>
     </div>
-    <div class="col-4">
-        <div class="border border-bottom-0 bg-light  p-1">
-            <b>Type</b>
-        </div>
-        <div class="border  p-1">
-            @Model.Evaluation.EvaluationType.Description
 
-        </div>
-    </div>
 </div>
 
+<hr />
 
 @foreach (var criteriaGroup in Model.CriteriaGroups.OrderBy(x => x.SequenceNumber))
 {
@@ -71,16 +70,13 @@
                     <span>@criteria.Description</span>
                 </div>
                 <div class="ml-auto">
-
-                    @*<input type="number" class="form-control scoreInput w-25" data-detailItemId="@detailItem.Id" value="@detailItem.AllocatedPoints" /> of <b>@criteria.TotalPoints</b>*@
+                                        
                     <select class="form-control scoreInput" data-detailItemId="@detailItem.Id">
-                        @for (int i = 0; i < criteria.TotalPoints; i++)
+                        @for (int i = 0; i <= criteria.TotalPoints; i++)
                         {
                             <option value="@i" selected="@(detailItem.AllocatedPoints == i ? true : false)">@i</option>
                         }
                     </select>
-
-                    @*<input class="form-control scoreInput" data-detailItemId="@detailItem.Id" value="@detailItem.AllocatedPoints" />*@
                 </div>
             </div>
         }
