--- a/src/SalonGarden.web/Views/Evaluations/Details.cshtml
+++ b/src/SalonGarden.web/Views/Evaluations/Details.cshtml
@@ -8,6 +8,12 @@
 
 <div class="border bg-light p-2 mb-2 d-flex">
     <div> <span class="h3">@Model.Student.Email</span></div>
+    <div class="ml-auto">
+        <div class=" p-2">
+            <span class="text-secondary"> <b>Status: </b>   @Model.Evaluation.EvaluationStatus.Description</span>
+        </div>
+       
+    </div>
 </div>
 
 <div class="mb-2">
@@ -80,6 +86,5 @@
 
 
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Evaluation.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
