--- a/src/SalonGarden.web/Views/Evaluations/Edit.cshtml
+++ b/src/SalonGarden.web/Views/Evaluations/Edit.cshtml
@@ -8,11 +8,14 @@
 <div class="border bg-light p-2 mb-2 d-flex">
     <div> <span class="h3">@Model.Student.Email</span></div>
     <div class="ml-auto">
-       
-            <button class="btn btn-success" data-toggle="modal" data-target="#completeEvalModal">
-                Complete Evaluation
-            </button>
-       
+        <button class="btn btn-danger" data-toggle="modal" data-target="#deleteEvalModal">
+            Delete Evaluation
+        </button>
+
+        <button class="btn btn-success" data-toggle="modal" data-target="#completeEvalModal">
+            Complete Evaluation
+        </button>
+
 
     </div>
 </div>
@@ -94,7 +97,7 @@
 
 
 <!-- Modal -->
-<div class="modal fade" id="completeEvalModal" tabindex="-1" role="dialog" >
+<div class="modal fade" id="completeEvalModal" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <form asp-action="CompleteEvaluation" asp-controller="Evaluations">
@@ -111,8 +114,35 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                     <button type="submit" class="btn btn-success">Complete Evaluation</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+
+<!-- Modal -->
+<div class="modal fade" id="deleteEvalModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <form asp-action="DeleteEvaluation" asp-controller="Evaluations">
+                <input type="hidden" name="evaluationId" value="@Model.Evaluation.Id" />
+                <div class="modal-header">
+                    <h5 class="modal-title">Delete Evaluation</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="alert alert-danger">
+                        Delete this evaluation?
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <button type="submit" class="btn btn-danger">Delete Evaluation</button>
                 </div>
             </form>
         </div>
