--- a/src/SalonGarden.web/Views/Shared/_Layout.cshtml
+++ b/src/SalonGarden.web/Views/Shared/_Layout.cshtml
@@ -32,9 +32,13 @@
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Evaluations" asp-action="Index">Evaluations</a>
-                        </li>
+                        @if (User.IsInRole(Constants.Roles.EDUCATOR))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-light" asp-area="" asp-controller="Evaluations" asp-action="Index">Evaluations</a>
+                            </li>
+                        }
+
                     </ul>
                 </div>
             </div>
