--- a/src/SalonGarden.web/Views/_ViewImports.cshtml
+++ b/src/SalonGarden.web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using SalonGarden.Web
 @using SalonGarden.Web.Models
+@using SalonGarden.Web.Data
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
